# Starfield-SimultaneousInput

./: .clang-format  .gitmodules  CMakeLists.txt  EXCEPTIONS  vcpkg.json
.github/workflows/: build.yml
cmake/: Plugin.h.in
src/RE/: IDEvent.h  InputEvent.h  MouseMoveEvent.h  Offset.Ext.h  UserEvents.h
src/export/: SFSEPlugin.cpp
